--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,24 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.1
   font_awesome_flutter:
+  google_fonts: ^2.0.0
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.0.3
+  cloud_firestore: ^1.0.4
+  provider: ^4.3.3
+  google_sign_in: ^4.5.1
+  flutter_facebook_auth: ^1.0.0
+  curved_navigation_bar: ^0.3.7
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,6 +64,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/images/marcas/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
